<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn"
    android:padding="20dp">

    <TextView
        android:id="@+id/register1"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:text="@string/let_register_your_acct"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="32sp"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/hello_user"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="8dp"
        android:text="@string/hello_user"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@id/register1" />

    <EditText
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:hint="@string/name_input"
        android:inputType="textEmailAddress"
        android:background="@drawable/input_with_border"
        android:padding="12dp"
        android:paddingHorizontal="20dp"
        android:layout_marginTop="40dp"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hello_user"/>

    <EditText
        android:id="@+id/user_name"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:hint="@string/user_name"
        android:inputType="textPassword"
        android:background="@drawable/input_with_border"
        android:padding="12dp"
        android:paddingHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name"/>

    <EditText
        android:id="@+id/phone"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:hint="@string/phone"
        android:inputType="textPassword"
        android:background="@drawable/input_with_border"
        android:padding="12dp"
        android:paddingHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_name"/>

    <EditText
        android:id="@+id/email_input"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:hint="@string/email_input"
        android:inputType="textPassword"
        android:background="@drawable/input_with_border"
        android:padding="12dp"
        android:paddingHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone"/>

    <EditText
        android:id="@+id/password_input"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:background="@drawable/input_with_border"
        android:padding="12dp"
        android:paddingHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_input"/>

    <Button
        android:id="@+id/signUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/signUp"
        android:background="@drawable/input_with_border"
        android:padding="12dp"
        android:paddingHorizontal="20dp"
        android:layout_marginTop="40dp"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:backgroundTint="@color/signIn_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_input"/>


    <LinearLayout
        android:id="@+id/bottom_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/signUp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_acct"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/sign_in_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/blue_text"
            android:textStyle="bold"
            android:textSize="16sp"
            android:paddingLeft="5dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>