<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn"
    android:padding="20dp">

    <TextView
        android:id="@+id/title1"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:text="@string/let_sign_you_in"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="32sp"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/sub_title"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="8dp"
        android:text="@string/welcome_back"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@id/title1"
        tools:layout_editor_absoluteX="8dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:background="@drawable/input_with_border"
        android:padding="12dp"
        android:paddingHorizontal="20dp"
        android:layout_marginTop="70dp"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sub_title"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:background="@drawable/input_with_border"
        android:padding="12dp"
        android:paddingHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email"/>

    <TextView
        android:id="@+id/forgot"
        android:layout_width="wrap_content"
        android:layout_height="24sp"
        android:textSize="14sp"
        android:layout_marginTop="12dp"
        android:text="@string/forgot"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/signIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/signIn"
        android:background="@drawable/input_with_border"
        android:padding="12dp"
        android:paddingHorizontal="20dp"
        android:layout_marginTop="40dp"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:backgroundTint="@color/signIn_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgot"/>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/orLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/signIn">
    <View
        android:layout_width="0dp"
        android:layout_height="1.2dp"
        android:layout_weight="0.2"
        android:background="@color/grey"  />

    <!-- Text in the middle -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingHorizontal="8dp"
        android:layout_gravity="center" />

    <!-- Right line -->
    <View
        android:layout_width="0dp"
        android:layout_height="1.2dp"
        android:layout_weight="0.2"
        android:background="@color/grey" />
</LinearLayout>

    <LinearLayout
        android:id="@+id/icon_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/orLayout">

        <ImageView
            android:id="@+id/google"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginRight="25dp"
            android:src="@drawable/google"
            android:contentDescription="google_icon"
            app:layout_constraintTop_toBottomOf="@id/orLayout"/>

        <ImageView
            android:id="@+id/facebook"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginRight="25dp"
            android:src="@drawable/facebook_icon"
            android:contentDescription="facebook_icon"
            app:layout_constraintTop_toBottomOf="@id/orLayout"/>

        <ImageView
            android:id="@+id/apple"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/apple"
            android:contentDescription="apple_icon"
            app:layout_constraintTop_toBottomOf="@id/orLayout"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/icon_layout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/do_not_have_an_account"
        android:textSize="16sp"/>

        <TextView
            android:id="@+id/sign_in_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_now"
            android:textColor="@color/blue_text"
            android:textStyle="bold"
            android:textSize="16sp"
            android:paddingLeft="5dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>