<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/onboarding_img"
        android:layout_width="fill_parent"
        android:layout_height="400dp"
        android:src="@drawable/onboarding"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/onboarding_title"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginBottom="10dp"
        android:text="@string/team_work"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="32sp"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/onboarding_img"
        />

    <TextView
        android:id="@+id/onboarding_sub_title"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/sub_text"
        android:textSize="14sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/onboarding_title"
        />

    <ImageView
        android:id="@+id/indicator"
        android:layout_width="120dp"
        android:layout_marginTop="10dp"
        android:layout_height="40dp"
        android:src="@drawable/indicator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/onboarding_sub_title"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginTop="30dp"
        android:weightSum="1"
        app:layout_constraintTop_toBottomOf="@id/indicator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/home_sigIn"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginLeft="8dp"
            android:paddingHorizontal="50dp"
            app:layout_constraintTop_toBottomOf="@id/indicator"
            android:text="@string/home_sign_In"
            android:backgroundTint="@color/black"
            app:cornerRadius="8dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/home_register"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginLeft="8dp"
            android:paddingHorizontal="45dp"
            app:layout_constraintTop_toBottomOf="@id/indicator"
            android:text="@string/register"
            android:backgroundTint="@color/signIn_blue"
            app:cornerRadius="8dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>